Adding more css files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="assets/css/styles.css" media="(max-width: 360px)">
+	<link rel="stylesheet" href="assets/css/styles-i.css" media="(max-width: 375px)">
+	<link rel="stylesheet" href="assets/css/styles-i.css" media="(max-width: 411px)">
 	<style>
 		body,html {
 			height: 100%;
